# ChangeLog for dev-ruby/highrise
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*highrise-3.1.1 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +highrise-3.1.1.ebuild:
  Version bump.

*highrise-3.0.5 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org> +highrise-3.0.5.ebuild:
  Version bump.

*highrise-3.0.3 (25 Jul 2012)

  25 Jul 2012; Hans de Graaff <graaff@gentoo.org> +highrise-3.0.3.ebuild,
  +metadata.xml:
  Initial import.
