@@ -1,3 +1,1 @@
-DIST highrise-3.0.3.gem 13824 SHA256 ff501454d8b59e71d72e7b5fb39089d570b7519e49402372a42e8a9cf17d17bb SHA512 002eaba9888bb9e280d8ef23bffc09fa1dd444e10fada337c399a096e0f3408de26bb8617bef6830154b5a07d90eee9c7c574421a277df4c2d7f074549d12750 WHIRLPOOL 2e896d5f04858b8866d156172f1f3f34d9142ba1f9990fb3382465190fbfcd98faab15eb19283f0e9a4ae01c9c4a028f2ff1f1d767a5d8939480d1b730464eeb
-DIST highrise-3.0.5.gem 19968 SHA256 19c43d1cca3a1899b1f700a079efafd93e21b27b9cb221225208296fd32c8843 SHA512 7569de043e9f8a65ec566aaa6dc5b684265d7edd75f55d06161c4f34898d016a129280a10ab30c12a0321cd4f6450fbcf1c8422ca65188e6033d4e5b2a45424f WHIRLPOOL e27fe2924ddc9382d4e3727b8d49a5ae962065ff5caff778c446669c397ceef10afaaf3aa170e28dd4da8b183e71ad363fbced775bb9f3ef543c60c496db60a3
 DIST highrise-3.1.1.gem 20480 SHA256 4b1ca12916fff098624cd12c4921080d342743646566301256ce66a912872057 SHA512 58ce593c355655ece01f5bd14e41b8744cafd16ba76da4a3f17532e32a8899b3dbce42d865b61393d60c0bfdc18cb9fa77fb72f2fadfb5aab3813cbe58a6eee0 WHIRLPOOL 455fc7335f1579120536e9509246743cd2e2a25040b2d5acb418442045f0bea8e5f591cedecbbe8e01c859dc51fe01ecef5616f88263a0a831e884117ee05b20
