@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Oct 2013; Hans de Graaff <graaff@gentoo.org> -highrise-3.0.3.ebuild,
+  -highrise-3.0.5.ebuild:
+  Cleanup.
+
 *highrise-3.1.1 (26 Jul 2013)
 
   26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +highrise-3.1.1.ebuild:
